# requestsautomation

./: .gitignore  Cargo.toml  Config.toml  Config_test.toml  Dockerfile  build.rs  docker-bake.hcl  ids.csv  path.csv  path2.csv  path3.csv
.github/workflows/: rust.yml
.github/workflows /: prod  prod.yml
config/: default.toml  development.toml
proto/: cal.proto  grpc.grpc  usr.proto
src/: config.rs  datapolars.rs  error.rs  grpcserver.rs  grpctypes.rs  httprequests.rs  main.rs  model.rs  types.rs
src/db/: db.rs  mod.rs  types.rs
src/http/: client.rs  httprequests.rs  mod.rs
src/wrangle/: convert.rs
