[package]
name = "requestsautomation"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lints.rust]
unsave_code = "forbid"
#unused = { level = "allow", priorit = -1}

[dependencies]
num-traits = "0.2"
reqwest = { version = "0.12", features = [
    "json",
] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
#axum = {version="0.7.4"}
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1" # for our async runtime
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
polars = { version = "0.39.2", features = [
    "dtype-time",
    "temporal",
    "dtype-datetime",
    "dtype-date",
    "lazy",
    "json",
    "serde",
    "strings",
    "regex",
] }
toml = "0.8"
async-trait = "0.1"
strum_macros = "0.27"
csv = "1.3"
chrono = { version = "0.4" }
prost = "0.13"
prost-types = "0.13"
tonic-reflection = "0.13"
tonic = "0.13"
config = "0.15.11"
surrealdb = "2.3.3"
thiserror = "2.0.12"

[profile.release]
#link time optimization - better optimization
lto = true
#quicker build but slower runtime
codegen-units = 1
panic = "abort"


[dev-dependencies]
assert_fs = "1.1"


[build-dependencies]
tonic-build = "0.13"
